@@ -1,5 +1,10 @@
 cdebconf (0.55) UNRELEASED; urgency=low
 
+  * Denis Barbier
+    - The confmodule_update_seen_questions function was broken, only
+      one question was added/removed to the stack of already seen
+      questions.
+
   * Translations:
     - Eugen Meshcheryakov : added Ukrainian translation (uk.po)
 
